--- a/mainapp_ru/templates/mainapp_ru/base.html
+++ b/mainapp_ru/templates/mainapp_ru/base.html
@@ -5,47 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <title>
+      {% block title %}
+      {% endblock %}</title>
+      {% block css %}
+        <link rel="stylesheet" href="{% static "css/main.css" %}">
+      {% endblock %}
 </head>
 <body>
   <div class="wrapper">
-    <header class="header">
-        Контакты
-        <div class="search-info">Поиск</div>
-    </header>
-    <div class="banner">баннер и нах он тут нужен?</div>
-    <ul class="menu">
-        <li><a href="#">Образование и учеба</a></li>
-        <li><a href="#">Иммиграция</a></li>
-        <li><a href="#">Посещение Канады</a></li>
-        <li><a href="#">Жизнь в Канаде</a></li>
-        <li><a href="#">Информация о проекте</a></li>
-    </ul>
+    {% include "mainapp_ru/includes/inc_header.html" %}
     <div class="clr"></div>
     <div class="content-box">
-      <article class="content">
-        <h1>{{home_ru.h1}}</h1>
+      {% block content %}
 
- Иностранным студентам по многим причинам интересно и выгодно учиться в Канаде - стране, которая является одним из лидеров по уровню экономического развития, где, благодаря низкому уровню преступности, безопасно, стандарты образования очень высокие, стоимость обучения и проживания умеренная, а перспективы для выпускников открываются широкие.
+      {% endblock %}
 
- Наш ресурс – это объединение образовательной и иммиграционной компаний с общим стажем работы в образовании и иммиграции продложительностью более 15 лет. Наши консультанты получали образование в Канаде, отправляли детей на курсы и на обучение в школы и вузы в этой стране, имеют сертификаты международных организаций по профессиональному образованию (ICEF, Course of Education in Canada for Agents), необходимые лицензии на проведение консультаций по визовым и иммиграционным вопросам (ICCRC).
-
- Мы можем быть Вам полезными в выборе программы обучения (не только с точки зрения подбора учебного заведения, но также в вопросах профессиональной ориентации и перспектив трудоустройства после завершения обучения в Канаде) и зачислении в языковые школы, средние и высшие школы (как государственные, так и частные), в колледжи и университеты. Мы являемся официальными представителями более 40 государственных вузов Канады.
-
- Мы будем рады, если информация, собранная на нашем ресурсе, окажется полезной для Вас и поможет разобраться в основных учебных и иммиграционных программах, которые открыты в Канаде. И предлагаем Вам начать Ваш путь в Канаду или продолжить его с нами!
-      </article>
-        <div class="request-info">
-          Запросить дополнительную информацию
-        </div>
-      </div>
     </div>
+
     <span class="review">Отзывы</span>
     <div class="review-content">
       Мне очень понравилась стажировка, организованная колледжем Upper Career College of Business and Technology (Toronto, Canada), - в рамках программы Understanding of International Marketplace - в финансовом отделе Sheraton Centre Hotel в Торонто. Я прошла курс Understanding International Marketplace (бизнес программа) и решила пройти стажировку в канадской компании, с тем чтобы получить опыт работы в Канаде и увеличить шансы на успешное получение работы в гостинице моей мечты. Я была впечатлена тем, что знания, которые я получила во время курса Business Essentials в UCCBT я применяла на практике каждый день. Кроме того, UCCBT помог мне подготовиться к работе с финансовыми отчетами, поскольку я получила знания об особенностях финансового планирования, бюджетирования, и работы с финансовыми потоками. Другая причина, почему я была рада возможности пройти стажировку состоит в том, что я могла наблюдать то, что финансист делает ежедневно, работая в офисе гостиницы. Не только работа с финансовым контролером гостиницы была полезной и дала мне опыт, поскольку все сотрудники в моем отделе были добры и терпеливы со мной. Они всегда объясняли мне то, что необходимо делать, а если вдруг возникали вопросы или проблемы, они брали тайм-аут в своем напряженном расписании, и помогали мне разобраться с работой. Мои задачи включали следующее: выписка счетов, расчет налогов за отчетный период, общий учет движения денежных средств, проверка соответствия поступившей оплаты выставленным счетам, а также административная работа в офисе. На мой взгляд, Sheraton Centre Торонто – отличная компания для работы, чтобы узнать о финансах и вложить время в развитие своей карьеры. Я настоятельно рекомендую UCCBT и программы стажировок для любого студента, который заинтересован в бизнесе!
     </div>
-    <footer class="footer">
-    <p>&copy 2018 COPYRIGHT</p>
-    </footer>
+    <div class="footer">
+
+      <footer class="footer">
+        <p>&copy 2018 COPYRIGHT</p>
+      </footer>
+    </div>
+    </div>
 </body>
 </html>
