Create normal db

--- a/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
+++ b/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
@@ -5,8 +5,8 @@
 <div class="banner">баннер и нах он тут нужен?</div>
 <ul class="menu">
     <li><a href="{% url 'mainapp_ru:home' %}">Образование и учеба</a></li>
-    <li><a href="#">Иммиграция</a></li>
-    <li><a href="#">Посещение Канады</a></li>
-    <li><a href="#">Жизнь в Канаде</a></li>
-    <li><a href="#">Информация о проекте</a></li>
+    <li><a href="{% url 'mainapp_ru:immigration' %}">Иммиграция</a></li>
+    <li><a href="{% url 'mainapp_ru:visit' %}">Посещение Канады</a></li>
+    <li><a href="{% url 'mainapp_ru:life' %}">Жизнь в Канаде</a></li>
+    <li><a href="{% url 'mainapp_ru:about' %}">Информация о проекте</a></li>
 </ul>
