--- a/mainapp_ru/templates/mainapp_ru/base.html
+++ b/mainapp_ru/templates/mainapp_ru/base.html
@@ -11,6 +11,9 @@
       {% block css %}
         <link rel="stylesheet" href="{% static "css/main.css" %}">
       {% endblock %}
+      {% block js %}
+        <script type="text/javascript" src={% static "/js/langChange.js" %}></script>
+      {% endblock %}
 </head>
 <body>
   <div class="wrapper">
