En form complete

--- a/mainapp_en/templates/mainapp_en/includes/inc_header.html
+++ b/mainapp_en/templates/mainapp_en/includes/inc_header.html
@@ -8,15 +8,16 @@
 <div class="banner">banner</div>
 <nav>
   <ul class="menu">
-    <li><a href="{% url 'mainapp_ru:home' %}">Education</a></li>
-    <li><a href="{% url 'mainapp_ru:immigration' %}">Immigration</a>
+    <li><a href="{% url 'mainapp_en:home' %}">Education</a></li>
+    <li><a href="{% url 'mainapp_en:immigration' %}">Immigration</a>
       <ul>
         <li><a href="#">For B</a></li>
         <li><a href="#">For P</a></li>
       </ul>
     </li>
-    <li><a href="{% url 'mainapp_ru:visit' %}">Visit to Canada</a></li>
-    <li><a href="{% url 'mainapp_ru:life' %}">Life in Canada</a></li>
-    <li><a href="{% url 'mainapp_ru:about' %}">About us</a></li>
+    <li><a href="{% url 'mainapp_en:visit' %}">Visit to Canada</a></li>
+    <li><a href="{% url 'mainapp_en:life' %}">Life in Canada</a></li>
+    <li><a href="{% url 'mainapp_en:about' %}">About us</a></li>
+    <li><a href="{% url 'mainapp_en:form' %}">Client Assessment Form</a></li>
   </ul>
 </nav>
