--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -168,4 +168,119 @@ div.footer {
 
 }
 
+form p label{
+    display: block;
+}
+.radio li {
+    display: inline;
+    margin-right:.5em;
+}
+
+form input[type=text]{
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 1.5em;
+    width: 100%;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+}
+form input[type=tel]{
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 1.5em;
+    width: 100%;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+}
+form input[type=radio]{
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 1.5em;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+    position: relative;
+    top:6px;
+}
+form textarea{
+    border: .1em solid #ccc;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 10em;
+    width: 100%;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+    resize:none;
+}
+form select{
+    border: .1em solid #ccc;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 1.9em;
+    width: 100%;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: .5em;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance:none;
+    background-image: url(/static/img/select-arrow-open.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+}
+/* form select:focus{
+    outline: none;
+} */
+
+form button {
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
+  padding: .8em 1em; #calc(.8em + 3px);
+  border-radius: 3px;
+  background: rgb(64,199,129);
+  box-shadow: 0 -3px rgb(53,167,110) inset;
+  transition: 0.2s;
+}
+form button:hover { background: rgb(53, 167, 110); }
+form button:active {
+  background: rgb(33,147,90);
+  box-shadow: 0 3px rgb(33,147,90) inset;
+}
+
+
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner, select::-moz-focus-inner, select{
+border: none;
+}
+select:-moz-focusring {
+  color:transparent;
+  text-shadow:0 0 0 #000;
+}
+select:-moz-focusring * {
+  color:#222; /* your normal text color here */
+  text-shadow:none;
+}
+
 #720x1280 - mobile
