--- a/mainapp_en/templates/mainapp_en/form.html
+++ b/mainapp_en/templates/mainapp_en/form.html
@@ -111,6 +111,9 @@
 <button type="submit" name="button">Send</button>
 </form>
 {% endblock %}
+{% block review %}
+
+{% endblock %}
 <!-- <p><label for="{{form.id_for_label}}">{{form.label}}</label><br></p>
 <ul class='radio'>
 <li>
