--- a/static/static/css/main_form.css
+++ b/static/static/css/main_form.css
@@ -26,7 +26,6 @@ html, body {
     position: relative;
     top: 2em;
 }
-
 .first a{
     text-decoration: none;
     float: right;
@@ -61,12 +60,7 @@ html, body {
 .banner {
     background-color: #aaa;
     width: auto;
-    height: 16em;
-    /* background: transparent; */
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 32%,rgba(0,0,0,0) 45%,rgba(245,245,245,0.9) 46%,rgba(245,245,245,1) 47%), url('../img/Canada-Alberta-Banff-national-Park-winter-forest-river-stream-snow_1920x1200.jpg');
-    background-size: 110% 290%;
-    background-repeat: no-repeat;
-    background-position: 50% 20%;
+    height: 10em;
 }
 nav {
     margin: 0 0 1em 0;
@@ -174,7 +168,6 @@ span.review {
     position: relative;
     min-height: 100%
 }
-
 .form-h1{
     margin-bottom: .4em;
     text-align: center;
@@ -193,18 +186,19 @@ hr {
     margin-bottom: 2em;
     text-align: center;
     text-transform:uppercase;
+
 }
 
 form {
     min-height: 100%;
     padding-bottom: 4em;
 }
+
 form label{
-    display:inline-block;
+    display: block;
     text-indent: .7em;
     margin: .2em 0;
 }
-
 .radio li {
     display: inline;
     margin-right:.5em;
@@ -284,9 +278,39 @@ form input[type=tel]:placeholder-shown{
     margin: .3em 0;
     text-indent: 1em;
 }
+/* form input[type=radio]{
+    border: 1px solid #3b3;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 1.5em;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+    position: relative;
+    top:6px;
+} */
+/* form ul{
+    border: 1px solid #3b3;
+    border-radius: 3px;
+    background: #fff;
+    outline: none;
+    height: 1.5em;
+    font-family: Tahoma;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+    position: relative;
+    top:6px;
+}
+form ul li{
+    background: #fff;
+    outline: none; */
 
+}
 form ul li label{
-    background: #f5f5f5;
+    background: #fff;
     outline: none;
 
 }
@@ -351,6 +375,47 @@ form select{
 form select option{
     text-indent: 2em;
 }
+/* form input:valid + span::after{
+    margin-left: 1px;
+    content: "\2713";
+    color: #3b3;
+}
+form textarea:valid + span::after{
+    margin-left: 1px;
+    content: "\2713";
+    color: #3b3;
+    position: relative;
+    bottom: 5em;
+} */
+/* form input:invalid + span::after{
+    margin-left: 1px;
+    font-family: serif;
+    content: "X";
+    color: #b33;
+}
+form textarea:invalid + span::after{
+    margin-left: 1px;
+    font-family: serif;
+    content: "X";
+    color: #b33;
+    position: relative;
+    bottom: 5em;
+} */
+/* .errorlist > li{
+     border: 1px solid #922;
+    border-radius: 3px;
+    display: inline-block;
+    height: 1.9em;
+    width: 100%;
+    padding: .2em 0;
+    margin: .3em 0;
+    text-indent: 1em;
+    display: none;
+} */
+/* form select:focus{
+    outline: none;
+} */
+
 form button {
   font-weight: 700;
   color: white;
