--- a/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
+++ b/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
@@ -2,19 +2,14 @@
 <header class="header">
     Контакты
     <div class="search-info">Поиск</div>
-    <span class='lang-change'><a href="javascript:void(0);" onClick="javascript:getLang_ru();">Ru</a></span>
-    <span class='lang-change'><a href="javascript:void(0);" onClick="javascript:getLang_en();">En</a></span>
+    <span class="lang last {% if '/ru/' in request.get_full_path %}active_lang{% endif %}"><a href="javascript:void(0);" onClick="javascript:getLang_ru();">Ru</a></span>
+    <span class="lang first {% if '/en/' in request.get_full_path %}active_lang{% endif %}"><a href="javascript:void(0);" onClick="javascript:getLang_en();">En</a></span>
 </header>
-<div class="banner">баннер и нах он тут нужен?</div>
+<div class="banner"></div>
 <nav>
   <ul class="menu">
     <li><a href="{% url 'mainapp_ru:home' %}">Образование и учеба</a></li>
-    <li><a href="{% url 'mainapp_ru:immigration' %}">Иммиграция</a>
-      <ul>
-        <li><a href="#">Иммиграция</a></li>
-        <li><a href="#">Иммиграция</a></li>
-      </ul>
-    </li>
+    <li><a href="{% url 'mainapp_ru:immigration' %}">Иммиграция</a></li>
     <li><a href="{% url 'mainapp_ru:visit' %}">Посещение Канады</a></li>
     <li><a href="{% url 'mainapp_ru:life' %}">Жизнь в Канаде</a></li>
     <li><a href="{% url 'mainapp_ru:about' %}">Информация о проекте</a></li>
