--- a/mainapp_ru/templates/mainapp_ru/base.html
+++ b/mainapp_ru/templates/mainapp_ru/base.html
@@ -19,18 +19,20 @@
   <div class="wrapper">
     {% include "mainapp_ru/includes/inc_header.html" %}
     <div class="clr"></div>
-    
+
     <div class="content-box">
       {% block content %}
 
       {% endblock %}
 
     </div>
-
-    <span class="review">Отзывы</span>
-    <div class="review-content">
-      Мне очень понравилась стажировка, организованная колледжем Upper Career College of Business and Technology (Toronto, Canada), - в рамках программы Understanding of International Marketplace - в финансовом отделе Sheraton Centre Hotel в Торонто. Я прошла курс Understanding International Marketplace (бизнес программа) и решила пройти стажировку в канадской компании, с тем чтобы получить опыт работы в Канаде и увеличить шансы на успешное получение работы в гостинице моей мечты. Я была впечатлена тем, что знания, которые я получила во время курса Business Essentials в UCCBT я применяла на практике каждый день. Кроме того, UCCBT помог мне подготовиться к работе с финансовыми отчетами, поскольку я получила знания об особенностях финансового планирования, бюджетирования, и работы с финансовыми потоками. Другая причина, почему я была рада возможности пройти стажировку состоит в том, что я могла наблюдать то, что финансист делает ежедневно, работая в офисе гостиницы. Не только работа с финансовым контролером гостиницы была полезной и дала мне опыт, поскольку все сотрудники в моем отделе были добры и терпеливы со мной. Они всегда объясняли мне то, что необходимо делать, а если вдруг возникали вопросы или проблемы, они брали тайм-аут в своем напряженном расписании, и помогали мне разобраться с работой. Мои задачи включали следующее: выписка счетов, расчет налогов за отчетный период, общий учет движения денежных средств, проверка соответствия поступившей оплаты выставленным счетам, а также административная работа в офисе. На мой взгляд, Sheraton Centre Торонто – отличная компания для работы, чтобы узнать о финансах и вложить время в развитие своей карьеры. Я настоятельно рекомендую UCCBT и программы стажировок для любого студента, который заинтересован в бизнесе!
-    </div>
+    {% block review %}
+      <span class="review">Отзывы</span>
+      <div class="review-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius deserunt ipsam reprehenderit, repudiandae quos numquam sapiente explicabo nesciunt optio, obcaecati, deleniti iure, beatae quod dignissimos. Numquam placeat quae cumque quisquam eveniet, quidem molestiae doloremque nulla est error expedita, omnis dolores maxime atque. Accusamus nam reiciendis magni impedit molestiae, et amet, mollitia fugiat facere ratione quaerat veniam possimus, labore deserunt, error ab quis! Optio laudantium nemo non reiciendis nobis nihil libero ullam voluptates, dolorum obcaecati ducimus, error repellat atque. Soluta asperiores eveniet, reprehenderit eius tempora inventore provident cupiditate porro rerum est, eligendi, blanditiis? Neque incidunt dicta praesentium qui at distinctio explicabo, doloribus earum animi, laudantium officiis ut vero dolor. Dicta nam ab, soluta provident iste architecto earum placeat magnam mollitia explicabo eaque, maxime amet blanditiis vero nobis rem dolores, non nisi harum voluptatum. Alias aperiam quidem nobis dolores adipisci inventore velit et doloribus totam est, eum minus libero tempora cupiditate ad, numquam voluptate commodi suscipit pariatur, aliquid eligendi nemo, esse distinctio expedita. Culpa laudantium harum reprehenderit ipsa! Possimus architecto officiis id praesentium beatae at dolores ex, qui vel laudantium voluptate nihil.
+      </div>
+    {% endblock %}
+    <div class="clr"></div>
     <div class="footer">
 
       <footer class="footer">
