--- a/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
+++ b/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
@@ -1,17 +1,19 @@
 {% load staticfiles %}
 <header class="header">
-    Контакты
-    <div class="search-info">Поиск</div>
+    <!-- Контакты -->
+    <!-- <div class="search-info">Поиск</div> -->
     <span class="lang last {% if '/ru/' in request.get_full_path %}active_lang{% endif %}"><a href="javascript:void(0);" onClick="javascript:getLang_ru();">Ru</a></span>
     <span class="lang first {% if '/en/' in request.get_full_path %}active_lang{% endif %}"><a href="javascript:void(0);" onClick="javascript:getLang_en();">En</a></span>
 </header>
 <div class="banner"></div>
 <nav>
   <ul class="menu">
-    <li><a href="{% url 'mainapp_ru:home' %}">Образование и учеба</a></li>
+    <li><a href="{% url 'mainapp_ru:home' %}" class="{% if 'education' in request.get_full_path %}active{% endif %} %}">Обучение</a></li>
+    <li><a href="{% url 'mainapp_ru:immigration' %}" class="{% if 'immigration' in request.get_full_path %}active{% endif %}">Иммиграция</a></li>
+    <li><a href="{% url 'mainapp_ru:visit' %}" class="{% if 'visit' in request.get_full_path %}active{% endif %}">Посещение Канады</a></li>
+    <li><a href="{% url 'mainapp_ru:life' %}" class="{% if 'life' in request.get_full_path %}active{% endif %}">Жизнь в Канаде</a></li>
     <li><a href="{% url 'mainapp_ru:immigration' %}">Иммиграция</a></li>
-    <li><a href="{% url 'mainapp_ru:visit' %}">Посещение Канады</a></li>
-    <li><a href="{% url 'mainapp_ru:life' %}">Жизнь в Канаде</a></li>
     <li><a href="{% url 'mainapp_ru:about' %}">Информация о проекте</a></li>
+    <li><a href="{% url 'mainapp_ru:form'  %}" class="{% if 'form' in request.get_full_path %}active{% endif %}">Форма оценки</a></li>
   </ul>
 </nav>
