--- a/mainapp_en/templates/mainapp_en/includes/inc_header.html
+++ b/mainapp_en/templates/mainapp_en/includes/inc_header.html
@@ -13,6 +13,6 @@
     <li><a href="{% url 'mainapp_en:visit' %}" class="{% if 'visit' in request.get_full_path %}active{% endif %}">Visit to Canada</a></li>
     <li><a href="{% url 'mainapp_en:life' %}" class="{% if 'life' in request.get_full_path %}active{% endif %}">Life in Canada</a></li>
     <li><a href="{% url 'mainapp_en:about' %}" class="{% if 'about' in request.get_full_path %}active{% endif %}">About us</a></li>
-    <li><a href="{% url 'mainapp_en:form'  %}" class="{% if 'form' in request.get_full_path %}active{% endif %}">Client Assessment Form</a></li>
+    <li><a href="{% url 'mainapp_en:forms'  %}" class="{% if 'forms' in request.get_full_path %}active{% endif %}">Forms</a></li>
   </ul>
 </nav>
