--- a/mainapp_en/templates/mainapp_en/index.html
+++ b/mainapp_en/templates/mainapp_en/index.html
@@ -1,4 +1,4 @@
-{% extends 'mainapp_en/base0.html' %}
+{% extends 'mainapp_en/base.html' %}
 {% load staticfiles %}
 
 {% block title %}
@@ -6,14 +6,12 @@
 {% endblock %}
 
 {% block content %}
+<h1 class="heading">{{home_en.h1}}</h1>
 <article class="content">
-  <h1 class="heading">{{home_en.h1}}</h1>
-  <p class="content-inner">{{home_en.paragraph1}}</p>
+  <p class="content-inner">{{home_en.paragraph1}}
   <p class="content-inner">{{home_en.paragraph2}}</p>
-  <p class="content-inner">{{home_en.paragraph3}}</p>
-  <p class="content-inner">{{home_en.paragraph4}}</p>
 </article>
-  <div class="request-info">
-    Запросить дополнительную информацию
-  </div>
+<div class="request-info">
+  <a href="{% url 'mainapp_en:education_form' %}">Fill and send the education form</a>
+</div>
 {% endblock %}
