--- a/mainapp_en/templates/mainapp_en/life.html
+++ b/mainapp_en/templates/mainapp_en/life.html
@@ -8,15 +8,26 @@
   <link rel="stylesheet" href="{% static "css/main.css" %}">
   <link rel="stylesheet" href="{% static "css/twosides.css" %}">
 {% endblock %}
+{% block left-side %}
+  <h2>In this section:</h2>
+  <aside class="">
+
+  <br>
+  <ul>
+    <li><a href="{% url 'mainapp_en:life-arrival_en' %}">Arrival to Canada</a></li>
+    <li><a href="{% url 'mainapp_en:life-health_ins_en' %}">Health Insurance</a></li>
+    <li><a href="{% url 'mainapp_en:life-pl_to_live_en' %}">Place to live</a></li>
+    <li><a href="{% url 'mainapp_en:life-work_en' %}">Work in Canada</a></li>
+    <li><a href="{% url 'mainapp_en:life-links_en' %}">Useful links</a></li>
+  </ul>
+  </aside>
+{% endblock %}
 {% block content %}
+<h1 class="heading">{{home_en.h1}}</h1>
 <article class="content">
-  <h1 class="heading">{{home_en.h1}}</h1>
-  <p class="content-inner">{{home_en.paragraph1}}</p>
-  <p class="content-inner">{{home_en.paragraph2}}</p>
-  <p class="content-inner">{{home_en.paragraph3}}</p>
-  <p class="content-inner">{{home_en.paragraph4}}</p>
-</article>
-  <div class="request-info">
-    Запросить дополнительную информацию
+  <div class="content-inner">
+    <p>{{home_en.paragraph1}}</p>
   </div>
+  <br>
+</article>
 {% endblock %}
