--- a/mainapp_ru/templates/mainapp_ru/about.html
+++ b/mainapp_ru/templates/mainapp_ru/about.html
@@ -14,6 +14,7 @@
   <p class="content-inner">{{home_ru.paragraph4}}</p>
 </article>
   <div class="request-info">
-    Запросить дополнительную информацию
+
+    Запросить <a href="https://www.youtube.com/watch?v=pkBl6z8XoQ8" class="sanya">д</a>ополнительную информацию
   </div>
 {% endblock %}
