--- a/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
+++ b/mainapp_ru/templates/mainapp_ru/includes/inc_header.html
@@ -14,6 +14,6 @@
     <li><a href="{% url 'mainapp_ru:life' %}" class="{% if 'life' in request.get_full_path %}active{% endif %}">Жизнь в Канаде</a></li>
     <li><a href="{% url 'mainapp_ru:immigration' %}">Иммиграция</a></li>
     <li><a href="{% url 'mainapp_ru:about' %}">Информация о проекте</a></li>
-    <li><a href="{% url 'mainapp_ru:form'  %}" class="{% if 'form' in request.get_full_path %}active{% endif %}">Форма оценки</a></li>
+    <li><a href="{% url 'mainapp_ru:forms'  %}" class="{% if 'forms' in request.get_full_path %}active{% endif %}">Форма оценки</a></li>
   </ul>
 </nav>
