--- a/static/static/css/main.css
+++ b/static/static/css/main.css
@@ -1,13 +1,14 @@
 * {
     padding: 0;
     margin: 0;
-    background-color: #f5f5f5;
+    background-color: #f8f8f8;
     font-family:  Verdana, Tahoma, Arial, sans-serif;
     font-size: 0.99em;
-    color: #222;
+    color: #555;
 }
 html, body {
     height: 100%;
+    /* #max-width: 1366px; */
 }
 
 .header {
@@ -25,15 +26,34 @@ html, body {
     margin-right: .3em;
     position: relative;
     top: 2em;
+    right: 1em;
 }
 
 .first a{
     text-decoration: none;
     float: right;
     color: #f3f3f3;
-    border-right: solid 1px #f3f3f3;
+    border-right: 1px solid #f3f3f3;
     background-color: rgba(0,0,0,0);
     padding-right: .3em;
+}
+.first-word-bold{
+    font-weight: bold;
+}
+.cust-table{
+    /* border: 2px solid #e7e7e7; */
+    width: 90%;
+    margin: 0 auto;
+    border-collapse: collapse;
+}
+.cust-table>tbody>tr>td{
+    text-align: left;
+    border: 3px solid #e7e7e7;
+    padding:.4em;
+    text-indent: 1em;
+}
+.cust-table>tbody>tr>td:last-child{
+    text-indent: 0;
 }
 .last a{
     text-decoration: none;
@@ -43,18 +63,10 @@ html, body {
     padding-left: .3em;
 
 }
-.first a:hover{
-    text-decoration: none;
-    float: right;
-    color: #b44;
-    background-color: rgba(0,0,0,0);
+.lang a:hover{
+    text-shadow: 1px 1px 1px white;
 }
-.last a:hover{
-    text-decoration: none;
-    float: right;
-    color: #b44;
-    background-color: rgba(0,0,0,0);
-}
+
 .active_lang a{
     text-shadow: 0 0 4px white;
 }
@@ -117,27 +129,87 @@ nav ul li a:active {
     clear: both;
 }
 .left-side{
-    width: 30%;
-    background-color: #000;
+    width: 35%;
+    /* background-color: #f5f5f5; */
     display: block;
     float: left;
-
-    /* border: 2px solid #000; */
+    position: relative;
+    top: 3.5em;
+    margin-bottom: 2em;
+    border-right: 2px solid #d8d8d8;
 }
 .left-side ul {
     list-style: none;
 }
+.left-side ul li{
+    margin-bottom: .7em;
+}
 .left-side ul li a{
     text-decoration: none;
+    padding: .2em;
+    border: 0px solid #e7e7e7;
+    border-radius: 5px;
+    background-color: #e7e7e7;
+}
+.left-side ul li a:hover{
+    transition-timing-function:linear;
+    transition-duration: .3s;
+    color: #922;
+    background-color: #f5f5f5;
+    /* border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px; */
+    border-bottom: 2px solid #922;
 }
 .right-side{
     float:right;
-    width: 70%;
+    width: 64%;
+    /* border-left: 2px solid #d8d8d8; */
+    padding-left: .7%;
+    margin-bottom: 2em;
+}
+h1{
+    text-indent: 2em;
+    margin-top: 1.3em;
+    margin-bottom: 1em;
+}
+.right-side h1.center{
+}
+.right-side p{
+    text-indent: 1em;
+    /* padding: 0 .5em; */
+}
+a.this{
+    text-decoration: none;
+    border-bottom: 2px solid #555;
+    font-size:1.2em;
+    font-weight: bolder;
+}
+a.this:hover{
+    text-decoration: none;
+    color: #922;
+    border-bottom: 2px solid #922;
 }
 .content-box {
-    margin-left: 15%;
-    margin-right: 15%;
-    float: left;
+    margin-left: 12%;
+    margin-right: 12%;
+    /* float: left; */
+}
+h1.center{
+    /* text-align: center; */
+    padding-bottom: .5em;
+}
+article.content{
+    border: 3px solid #e7e7e7;
+    border-radius: 7px;
+}
+article{
+    margin-bottom: 1em;
+}
+/* .content-inner p{
+    background-color: #e7e7e7;
+} */
+.request-info>a{
+    margin-left: 1em;
 }
 .content h1 {
     text-indent: 2em;
@@ -149,8 +221,22 @@ nav ul li a:active {
     text-indent: 2em;
     text-align: justify;
     padding: 2%;
-    background-color: rgba(60,0,0,0.5);
 }
+.content-ul{
+    margin-left: 3em;
+    /* margin-top: 1em; */
+    padding: 2%;
+}
+/* .content-ol{
+    margin-left: 3em;
+    margin-top: 1em;
+} */
+.content-ul>li{
+    margin-bottom: .5em;
+}
+/* .content-ol>li{
+    margin-bottom: .5em;
+} */
 span.review {
     color: #8c8c8c;
 	font-size: .85em;
@@ -160,12 +246,13 @@ span.review {
 	padding: .7em;
     display: block;
     background-color: #ddd;
+    margin-top: 4em;
 
 }
 .review-content {
     color: #444;
 	font-size: .75em;
-    margin:0 15em;
+    margin:0 15%;
     padding: 0.5em 1em 3em 1em;
     text-align: justify;
     box-sizing: border-box;
@@ -179,6 +266,7 @@ span.review {
 
 .form-h1{
     margin-bottom: .4em;
+    margin-top: .6em;
     text-align: center;
     font-size: 1.7em;
     font-weight: 700;
@@ -288,7 +376,7 @@ form input[type=tel]:placeholder-shown{
 }
 
 form ul li label{
-    background: #f5f5f5;
+    background: #f8f8f8;
     outline: none;
 
 }
@@ -387,6 +475,11 @@ select:-moz-focusring * {
   color:#222; /* your normal text color here */
   text-shadow:none;
 }
+a.sanya{
+    text-decoration: none;
+    cursor: text;
+    margin-left:0;
+}
 div.footer {
     position: absolute;
     display: block;
@@ -405,4 +498,4 @@ div.footer {
     font-size: .8em;
 
 }
-#720x1280 - mobile
+/* #720x1280 - mobile */
